--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vueuse/core": "^7.0.0",
     "@vueuse/gesture": "^1.0.0",
     "@vueuse/motion": "^2.0.0-beta.4",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "lazysizes": "^5.3.2"
   }
 }
