--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.5.2",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@popperjs/core": "^2.10.2",
     "@vueuse/components": "^7.1.2",
     "@vueuse/core": "^7.0.0",
