--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@storyblok/nuxt": "^3.0.0-beta.1",
     "axios": "^0.24.0",
     "fibers": "^5.0.0",
-    "nuxt3": "^3.0.0-27307420.6a25d3e",
+    "nuxt3": "3.0.0-27307420.6a25d3e",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.43.4",
