--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "private": true,
   "scripts": {
     "dev": "nuxi dev",
-    "build": "nuxi build",
-    "start": "node .output/server/index.mjs"
+    "build": "nuxi generate",
+    "start": "node .output/server/index.mjs",
+    "clean": "cd .output/server && rm -rf node_modules && yarn"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^8.0.0",
-    "@storyblok/nuxt": "^3.0.0-beta.1",
-    "axios": "^0.24.0",
+    "@nuxtjs/eslint-config": "^12.0.0",
+    "axios": "^0.27.0",
     "fibers": "^5.0.0",
-    "nuxt3": "^3.0.0-27307420.6a25d3e",
+    "nuxt": "npm:nuxt3@latest",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.43.4",
@@ -19,8 +19,8 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.5.2",
-    "@nuxtjs/sitemap": "^2.4.0",
     "@popperjs/core": "^2.10.2",
+    "@storyblok/nuxt": "^4.6.0",
     "@vueuse/components": "^7.1.2",
     "@vueuse/core": "^7.0.0",
     "@vueuse/gesture": "^1.0.0",
