--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "scripts": {
     "dev": "nuxi dev",
     "build": "nuxi generate",
-    "start": "node .output/server/index.mjs",
     "clean": "cd .output/server && rm -rf node_modules && yarn"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^12.0.0",
     "axios": "^0.27.0",
     "fibers": "^5.0.0",
-    "nuxt": "npm:nuxt3@latest",
+    "nuxt": "3.0.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.43.4",
     "sass-loader": "10",
-    "vite-svg-loader": "^3.1.0"
+    "vite-svg-loader": "^3.6.0"
   },
   "dependencies": {
     "@glidejs/glide": "^3.5.2",
@@ -26,6 +24,7 @@
     "@vueuse/gesture": "^1.0.0",
     "@vueuse/motion": "^2.0.0-beta.4",
     "bootstrap": "^5.1.3",
+    "clone-deep": "^4.0.1",
     "lazysizes": "^5.3.2"
   }
 }
