--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "deploy": "push-dir --dir=dist --branch=pages --cleanup"
   },
   "devDependencies": {
+    "@nuxtjs/strapi": "^1.6.3",
     "axios": "^0.27.0",
     "fibers": "^5.0.0",
     "nuxt": "3.0.0",
@@ -20,7 +21,6 @@
   "dependencies": {
     "@glidejs/glide": "^3.5.2",
     "@popperjs/core": "^2.10.2",
-    "@storyblok/nuxt": "^4.6.0",
     "@vueuse/components": "^7.1.2",
     "@vueuse/core": "^7.0.0",
     "@vueuse/gesture": "^1.0.0",
