--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "nuxi dev",
     "build": "nuxi generate",
     "clean": "cd .output/server && rm -rf node_modules && yarn",
-    "deploy": "push-dir --dir=dist --branch=pages --cleanup --force"
+    "deploy": "push-dir --dir=dist --branch=pages --cleanup --allow-unclean"
   },
   "devDependencies": {
     "@nuxtjs/strapi": "^1.6.3",
